--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ asgiref==3.8.1
 certifi==2025.4.26
 charset-normalizer==3.4.2
 cloudinary==1.44.0
+dj-database-url==2.3.0
 Django==5.2.1
 django-cloudinary-storage==0.3.0
 django-cors-headers==4.7.0
@@ -16,7 +17,9 @@ pydantic==2.11.5
 pydantic_core==2.33.2
 python-decouple==3.8
 python-dotenv==1.1.0
+razorpay==1.4.2
 requests==2.32.3
+setuptools==80.9.0
 six==1.17.0
 sniffio==1.3.1
 sqlparse==0.5.3
@@ -24,3 +27,4 @@ starlette==0.46.2
 typing-inspection==0.4.1
 typing_extensions==4.13.2
 urllib3==2.4.0
+whitenoise
